ARMOR ALLEY: REMASTERED
Changelog / Revision History
----------------------------

WORK IN PROGRESS: 2023-2024 updates since last major release
(V2.01.20230520: 10th Anniversary "Remastered" Edition Addendum)

--- 11/2024, uncategorized ---

Battle victory messages, based on original game - sometimes specific to the game difficulty. https://github.com/scottschiller/ArmorAlley/commit/8366b553f035fb12086fe7a13ef61c0773eb18ec

Battle defeat messages, more hints and tips. https://github.com/scottschiller/ArmorAlley/commit/adbc20502b78cede6c8989a4e53de6b1a0d6c0e2

Renaming difficulties similar to original game: Easy = Boot Camp. Hard = Wargames. Extreme = Armorgeddon. (TBD: "Conflict" difficulty, between the latter two.) https://github.com/scottschiller/ArmorAlley/commit/9fe2ea35c11df304d8f9e59de747b637da87b13f1

--- 10/2024, uncategorized ---

Battle flag re-labeling: Bullets, Napalm, Stealth, Jamming (BNSJ) -> Aimed Missiles, Napalm, Stealth, Interference (ANSI.) https://github.com/scottschiller/ArmorAlley/commit/9bb0fbb91509baec114b2a83a457bdd9bd0dec16

Battle flag, "jamming" update: radar has "interference" - partially inoperable and fuzzy, rather than completely blocked. https://github.com/scottschiller/ArmorAlley/commit/2d2d721c782d123c5ec316dcc4e86378daca9c98

The last missing weapon: "aimed" AKA "dumb" missiles for helicopters, replacing bullets. Enabled for certain battles and difficulties. https://github.com/scottschiller/ArmorAlley/commit/34739349d7ab61f35209990f5eadaeadd5df0f77

Don't show stealth helicopters on radar, unless they are in view on screen. Ditto for smoke. https://github.com/scottschiller/ArmorAlley/commit/b2079a4ab6b083494ca44ae9692fb742c8f4ac8f https://github.com/scottschiller/ArmorAlley/commit/03d022187720462181630c34d647eb513e264cc7

Bug fix: Smart missile targeting UI was showing stealth helicopters on radar. https://github.com/scottschiller/ArmorAlley/commit/9e62abf3c67f388d866a8070108304fc3b9abea4
